Add ModifyTransactionRequest.persistenceProtocol()
Use a @Nullable return, allowing users to be simpler. Also modernize
code with use of local variable type inference.

Change-Id: I16e6f46745e4ca43858b6a41324da639c21133ef
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>